# pay2u

./: .env.example  .gitignore  README.md  backend.Dockerfile  pyproject.toml  setup.cfg
backend/: README.md
backend/api/: filters.py  openapi.py  serializers.py  urls.py  views.py
backend/api/tests/: test_urls.py  test_views.py
backend/backend/: settings.py  urls.py  yasg.py
backend/payments/: models.py
backend/payments/management/commands/: load_payments.py
backend/payments/migrations/: 0001_initial.py
backend/subscriptions/: models.py
backend/subscriptions/management/commands/: load_csv_data.py  load_data.py
backend/subscriptions/migrations/: 0001_initial.py
backend/test_data/: categories.csv  categories.json  payments.json  promocodes.json  services.csv  services.json  subscriptions.csv  subscriptions.json  user_subscriptions.json
backend/users/management/commands/: create_dev_user.py
frontend/: .eslintrc.cjs  frontend.Dockerfile  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/app/: App.tsx
frontend/src/app/styles/: index.scss  reset.scss
frontend/src/components/ActiveServiceCard/: ActiveServiceCard.module.scss  ActiveServiceCard.tsx
frontend/src/components/ActiveServicesSlider/: ActiveServicesSlider.scss  ActiveServicesSlider.tsx
frontend/src/components/AllCategoriesDialog/: AllCategoriesDialog.module.scss  AllCategoriesDialog.tsx
frontend/src/components/CategoryDialog/: CategoryDialog.module.scss  CategoryDialog.tsx
frontend/src/components/CustomTabPanel/: CustomTabPanel.tsx
frontend/src/components/Header/: Header.module.scss  Header.tsx
frontend/src/components/HowToSubscribeDialog/: HowToSubscribeDialog.module.scss  (+1 more)
frontend/src/models/: ICategory.ts  IMySubscription.ts  IMySubscriptions.ts  IPayments.ts  IService.ts
frontend/src/services/: CategoriesService.ts  MySubscriptions.ts  PaymentsService.ts  ServicesService.ts
frontend/src/store/: store.ts
infra/: clean-restart  db_only  docker-compose-local-all.yaml  docker-compose-local-backend.yaml  docker-compose-local.yaml  docker-entrypoint.sh  postgres-local.yaml
nginx/: nginx.Dockerfile  nginx.conf
(+62 files in other folders)
