[tool.poetry]
name = "pay2u"
version = "0.1.0"
description = ""
authors = ["Denis Tretyakov <den.tretyakoff@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
djangorestframework = "^3.15.0"
django-filter = "^24.1"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
taskipy = "^1.12.2"
pillow = "^10.2.0"
python-dateutil = "^2.9.0.post0"
drf-yasg = "^1.21.7"
django-cors-headers = "^4.3.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
makemigrations = "python backend/manage.py makemigrations"
migrate = "python backend/manage.py migrate"
loaddata = "python backend/manage.py load_data"
loadpayments = "python backend/manage.py load_payments"
createdevuser = "python backend/manage.py create_dev_user"
start = "python backend/manage.py runserver 0:8000"
startdb = "docker compose -f infra/postgres-local.yaml up -d"
stopdb = "docker compose -f infra/postgres-local.yaml down"
onlydb = "make -f infra/db_only start"
clean_restart = "make -f infra/clean-restart start"
collectstatic = "python backend/manage.py collectstatic --noinput"
copystatic = "cp -r backend/collected_static/. /backend_static/"